# AgentLint

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
Documents/: adapters and instrumentation.md  architecture.md  architecture_decision_offline_trace_linter.md  glossary.md  idea.md  milestone_0_build_report.md  milestone_0_implementation_plan.md  milestone_0_research.md  milestone_10_build_report.md  milestone_10_implementation_plan.md  milestone_11_build_report.md  milestone_11_scope_alignment_implementation_plan.md  milestone_1_build_report.md  milestone_1_implementation_plan.md  milestone_1_research.md  milestone_2_architecture_decisions.md  milestone_2_build_report.md  milestone_2_implementation_plan.md  milestone_2_research.md  milestone_3_architecture_decisions.md  milestone_3_build_report.md  milestone_3_implementation_plan.md  milestone_4_architecture_decisions.md  milestone_4_build_report.md  milestone_4_implementation_plan.md  milestone_5_architecture_decisions.md  milestone_5_build_report.md  milestone_5_implementation_plan.md  milestone_6_build_report.md  milestone_6_implementation_plan.md  milestone_7_build_report.md  milestone_7_implementation_plan.md  milestone_8_build_report.md  milestone_8_capture_completeness_implementation_plan.md  milestone_9_build_report.md  milestone_9_implementation_plan.md  milestones.md  next steps.md  policy_declared_boundaries_build_report.md  release-and-evaluation-plan.md  (+4 more)
examples/expected_reports/: multi_policy_unknown_missing_approval.json  native_invalid_schema.json  policy_not_verifiable.json  policy_sensitive_final_answer.json  policy_tool_valid.json  policy_unknown_tool.json  structural_duplicate_event_id.json  structural_valid_tool_flow.json
examples/fixtures/: manifest.yaml
examples/openai_agents/: live_agent_demo.py  sdk_trace_demo.py
examples/openai_agents/customer_support/: README.md  agentlint.yaml  demo.py
examples/openai_agents/live_policy_agent/: README.md  agentlint.yaml  run.py
examples/opentelemetry/: generate_demo_trace.py  generate_sdk_demo_trace.py  local_agent_demo.py  support_agent_demo.py
examples/policies/: coding.yaml  customer_support.yaml  duplicate_key.yaml  invalid_schema.yaml  malformed.yaml  non_mapping.yaml  openai_function_tools.yaml  policy_checks.yaml  policy_checks_warning_only.yaml  policy_checks_with_exception.yaml  research.yaml  starter_approval.yaml  starter_data_flow.yaml  starter_provenance.yaml  starter_tools.yaml
examples/traces/: native_invalid_missing_event_ref.json  native_invalid_schema.json  native_malformed.json  native_minimal_valid.json  native_tool_flow_valid.json  policy_action_after_denial.json  policy_approval_after_action.json  policy_approval_mismatch.json  policy_approval_valid.json  policy_data_flow_valid.json  policy_denied_tool_call.json  policy_disallowed_tool_argument.json  policy_evidence_after_claim.json  policy_invalid_provenance_reference.json  policy_missing_approval.json  policy_private_to_public_sink.json  policy_provenance_valid.json  policy_secret_exposure.json  policy_sensitive_final_answer.json  policy_tool_valid.json  policy_unauthorized_tool_call.json  policy_unknown_tool.json  policy_unsupported_claim.json  policy_untrusted_to_privileged_action.json  structural_duplicate_edge_id.json  structural_duplicate_event_id.json  structural_invalid_event_order.json  structural_invalid_evidence_reference.json  structural_missing_event_reference.json  structural_tool_call_missing_arguments.json  structural_tool_result_without_call.json  structural_valid_tool_flow.json
scripts/: release_smoke.py  test_wheel.py
src/agentlint/: __init__.py  __main__.py  capture_checking.py  checking.py  cli.py  evidence.py  version.py
src/agentlint/adapters/: __init__.py  common.py  openai_agents.py  openai_snapshot.py  opentelemetry.py
src/agentlint/capture/: __init__.py  models.py
src/agentlint/diagnostics/: __init__.py  explanations.py  formatting.py  models.py
src/agentlint/integrations/: openai_agents.py  pytest_openai.py  pytest_runs.py
src/agentlint/ir/: __init__.py
src/agentlint/ir/v1/: __init__.py  loaders.py  models.py
src/agentlint/passes/: __init__.py  boundaries.py  policy.py  structural.py
src/agentlint/policy/: __init__.py  compile.py  loaders.py  models.py
src/agentlint/reports/: __init__.py  models.py  renderers.py
tests/: test_capture_checking.py  test_capture_models.py  test_checking.py  test_cli.py  test_diagnostics.py  test_evidence.py  test_fixture_corpus.py  test_ir_v1_loader.py  test_ir_v1_models.py  test_openai_agents_adapter.py  test_openai_agents_integration.py  test_openai_pytest_plugin_sample.py  test_openai_snapshot.py  test_opentelemetry_adapter.py  test_policy_boundaries.py  test_policy_compile.py  test_policy_loader.py  test_policy_models.py  test_policy_pass.py  test_pytest_plugin_workflow.py  test_pytest_runs.py  test_reports.py  test_structural_pass.py
