[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentlint"
version = "0.0.0"
description = "A CI linter for AI agent execution traces."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "AgentLint contributors" },
]
keywords = [
  "agents",
  "ai",
  "ci",
  "lint",
  "policy",
  "traces",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]
otel-demo = [
  "opentelemetry-sdk>=1.0",
]
openai-agents = [
  "openai-agents>=0.18,<0.19",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
agentlint = "agentlint.cli:main"

[project.entry-points.pytest11]
agentlint = "agentlint.integrations.pytest_openai"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-config",
  "--strict-markers",
]
markers = [
  "live_openai: opt-in tests that may call the OpenAI API",
  "performance: lightweight performance smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
